find_package(PythonInterp 2.7)

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/treecall.py.in"
  "${CMAKE_CURRENT_BINARY_DIR}/treecall.py" @ONLY)

install(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/treecall.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR} RENAME dng-treecall)

install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/geno.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})

install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/utils.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})

install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/tree_est.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
