find_package(PythonInterp 2.7)

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/treecall.py.in"
  "${CMAKE_CURRENT_BINARY_DIR}/treecall.py" @ONLY)

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/geno.py"
          "${CMAKE_CURRENT_SOURCE_DIR}/utils.py"
          "${CMAKE_CURRENT_SOURCE_DIR}/tree_est.py"
  DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

install(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/treecall.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR} RENAME dng-treecall)

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/geno.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/utils.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tree_est.py"
  DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
